--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@ ul{
 
 img{
   display: block;
+  min-width: 100%;
+  height: auto;
 }
 
 a{
@@ -343,8 +345,8 @@ margin-bottom: 8px;
 /* Porfolio */
 
 .portfolio {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .portfolio-container{
@@ -365,13 +367,14 @@ margin-bottom: 72px;
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
-  row-gap: 48px;
+  gap: 72px;
+  /* gap: 24px; */
+  /* row-gap: 48px; */
 }
 .portfolio-item {
   border-radius: 0px 0px 4px 4px;
   background: var(--WHITE, #FFF);
-  width: calc((100% - 24px * 2) / 3);
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -393,6 +396,7 @@ margin-bottom: 72px;
 }
 
 .portfolio-img {
+  margin: 0 auto;
 }
 
 
@@ -842,12 +846,19 @@ margin-bottom: 16px;
   }
   .team-list{
     gap: 64px 24px;
+    padding-right: 93px;
+    padding-left: 93px;
   }
   .team-item{
     width: calc((100% - 24px) /2);
   }
+  .portfolio-list{
+    gap: 72px 24px;
+  }
+  .portfolio-item{
+    width: calc((100% - 24px) /2);
+  }
 }
-
 @media screen and (min-width: 1400px){
   .container{
     max-width: 1158px;
@@ -874,8 +885,19 @@ margin-bottom: 16px;
   }
   .team-list{
     gap: 24px;
+    padding: 0;
   }
   .team-item{
     width: calc((100% - 96px) /4);
+  }
+  .portfolio{
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .portfolio-list{
+    gap: 48px 24px;
+  }
+  .portfolio-item{
+    width: calc((100% - 72px) /3);
   }
 }
