--- a/css/styles.css
+++ b/css/styles.css
@@ -145,17 +145,31 @@ color: #404BBF;
 .hero {
   max-width: 1440px;
   margin: 0 auto;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  /* padding-top: 188px;
+  padding-bottom: 188px; */
+  padding: 72px 0;
   background: var(--NAVY-BLUE, #2E2F42);
   background-image: linear-gradient(
     rgba(46, 47, 66, 0.70),
     rgba(46, 47, 66, 0.70)
   ),
-  url(../images/herobg.jpg);
+  url(../images/herobg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 129dpi),
+(min-resolution: 2dppx){
+  .hero{
+    background: var(--NAVY-BLUE, #2E2F42);
+    background-image: linear-gradient(
+    rgba(46, 47, 66, 0.70),
+    rgba(46, 47, 66, 0.70)
+  ),
+  url(../images/herobg-mob-2x.jpg);
+  }
 }
 
 .hero-container{
@@ -164,11 +178,14 @@ color: #404BBF;
 .hero-title {
   color: var(--WHITE, #FFF);
   text-align: center;
-  font-size: 56px;
+  /* font-size: 56px; */
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.07;
+  /* line-height: 1.07; */
+  line-height: 1.1;
   letter-spacing: 0.02em;
-  max-width: 496px;
+  /* max-width: 496px; */
+  max-width: 168px;
   margin: 0 auto;
 }
 
@@ -187,7 +204,7 @@ color: #404BBF;
   border-radius: 4px;
   border: 0;
   min-width: 169px;
-  margin-top: 48px;
+  margin-top: 72px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -226,7 +243,8 @@ color: #404BBF;
 }
 
 .best-icon-cotainer{
-  display: flex;
+  display: none;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
   width: 264px;
@@ -838,6 +856,35 @@ margin-bottom: 16px;
   .container{
     max-width: 768px;
   }
+  .hero{
+    padding-top: 112px;
+  padding-bottom: 112px;
+  background-image: linear-gradient(
+    rgba(46, 47, 66, 0.70),
+    rgba(46, 47, 66, 0.70)
+  ),
+  url(../images/herobg-tab.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+(min-resolution: 129dpi),
+(min-resolution: 2dppx){
+  .hero{
+    background: var(--NAVY-BLUE, #2E2F42);
+    background-image: linear-gradient(
+    rgba(46, 47, 66, 0.70),
+    rgba(46, 47, 66, 0.70)
+  ),
+  url(../images/herobg-tab-2x.jpg);
+  }
+}
+  .hero-title{
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+  }
+  .hero-button{
+    margin-top: 36px;
+  }
   .best-sides-list{
     gap: 72px 24px;
   }
@@ -865,11 +912,45 @@ margin-bottom: 16px;
     padding-left: 15px;
     padding-right: 15px;
   }
+  .hero{
+    padding-top: 188px;
+    padding-bottom: 188px;
+    background-image: linear-gradient(
+    rgba(46, 47, 66, 0.70),
+    rgba(46, 47, 66, 0.70)
+  ),
+  url(../images/herobg.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+(min-resolution: 129dpi),
+(min-resolution: 2dppx){
+  .hero{
+    background: var(--NAVY-BLUE, #2E2F42);
+    background-image: linear-gradient(
+    rgba(46, 47, 66, 0.70),
+    rgba(46, 47, 66, 0.70)
+  ),
+  url(../images/herobg-2x.jpg);
+  }
+}
+
+  .hero-title{
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+  }
+  .hero-button{
+    margin-top: 48px;
+  }
   .best-sides-list{
     gap: 24px;
   }
   .best-sides-list-item{
     width: calc((100% - 72px) /4);
+  }
+  .best-icon-cotainer{
+    display: flex;
   }
   .best-sides{
     padding-top: 120px;
