--- a/css/styles.css
+++ b/css/styles.css
@@ -156,37 +156,122 @@ color: #404BBF;
   height: 100vh;
   background-color: #FFF;
   padding: 24px 24px 40px 16px;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .menu-close-btn {
   display: block;
   margin-left: auto;
   margin-bottom: 24px;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn {
+
+.menu-close-btn:hover,
+.menu-close-btn:focus{
+  background-color: #404BBF;
+  border: none;
+}
+
+.modal-close-btn-icon {
+  fill: #2E2F42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn-icon:hover .modal-button-icon,
+.modal-close-btn-icon:focus .modal-button-icon{
+  fill: #FFFFFF;
 }
 .mob-menu-list {
+  margin-top: 72px;
 }
-.mob-menu-item {
+.mob-menu-item:not(:last-child) {
+  margin-bottom: 40px;
 }
 .mob-menu-link {
+  color: var(--NAVY-BLUE, #2E2F42);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11; 
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
+
+.mob-menu-link:hover,
+.mob-menu-link:focus{
+color: #404BBF;
+}
+
 .mob-contact-adress {
+  font-style: normal;
+  margin-top: auto;
 }
 .mob-contact-list {
 }
 .mob-contact-list-item {
 }
 .mob-contact-list-link {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--SLATE, #434455);
 }
+
+.mob-contact-list-item:not(:last-child){
+  padding-bottom: 24px;
+}
+
+.mob-contact-list-link:hover,
+.mob-contact-list-link:focus {
+color: #404BBF;
+}
+
 .mob-media-list {
+  display: flex;
+  gap: 40px;
+  margin-top: 48px;
 }
 .mob-media-list-item {
+  width: 40px;
+  height: 40px;
 }
 .mob-media-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mob-media-icon {
+  fill: #f4f4fd;
 }
+
+.mob-media-link:hover,
+.mob-media-link:focus{
+  background-color: #31D0AA;
+}
+
 
 /* Hero */
 .hero {
