--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ color: #404BBF;
 .contact-list {
   display: none;
   /* display: flex; */
-  gap: 40px;
+  /* gap: 40px; */
 }
 .contact-list-item {
 }
@@ -138,13 +138,31 @@ color: #404BBF;
   letter-spacing: 0.02em;
   color: #434455;
   display: block;
-  padding: 24px 0;
+  /* padding: 24px 0; */
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-list-link:hover,
 .contact-list-link:focus {
 color: #404BBF;
+}
+
+.menu-open-btn{
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
 }
 
 .mob-menu{
@@ -158,7 +176,9 @@ color: #404BBF;
   padding: 24px 24px 40px 16px;
   display: flex;
   flex-direction: column;
-
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: auto;
 }
 
 .menu-close-btn {
@@ -1036,6 +1056,22 @@ margin-bottom: 16px;
   }
   .portfolio-item{
     width: calc((100% - 24px) /2);
+  }
+  .header{
+    display: block;
+    height: 72px;
+  }
+  .header-menu{
+    display: flex;
+  }
+  .menu-open-btn{
+    display: none;
+  }
+  .contact-list{
+    display: flex;
+  }
+  .contact-list-link{
+    padding: 16px 0;
   }
 }
 @media screen and (min-width: 1158px){
