--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ a{
   display: flex;
   flex-grow: 1;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .header-menu {
@@ -138,7 +139,6 @@ color: #404BBF;
   letter-spacing: 0.02em;
   color: #434455;
   display: block;
-  /* padding: 24px 0; */
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -606,7 +606,8 @@ letter-spacing: 0.02em;
 
 .footer {
   background: var(--NAVY-BLUE, #2E2F42);
-  padding: 100px 0;
+  /* padding: 100px 0; */
+  padding: 96px 0;
 }
 .footer-logo {
   color: #4d5ae5;
@@ -633,6 +634,7 @@ max-width: 264px;
 .footer-container{
   display: flex;
   align-items: baseline;
+  flex-wrap: wrap;
 }
 
 .logo-paragraph{
@@ -640,6 +642,8 @@ max-width: 264px;
 }
 
 .social-media{
+  margin: 72px 0; 
+  /* delet this!!!!!!!!!!!!!!! */
 }
 
 .media-text {
@@ -685,7 +689,7 @@ margin-bottom: 16px;
 }
 
 .footer-wrapper{
-  margin-left: 80px;
+  /* margin-left: 80px; */
 }
 
 .wrapper-text{
@@ -699,6 +703,8 @@ margin-bottom: 16px;
 
 .footer-form{
   display: flex;
+  flex-wrap: wrap;
+  /* df and flex-wrap werent here */
   gap: 24px;
 }
 
@@ -706,7 +712,8 @@ margin-bottom: 16px;
 }
 
 .footer-input{
-  width: 264px;
+  /* width: 264px; */
+  width: 288px;
   height: 40px;
   border-radius: 4px;
   border: 1px solid var(--WHITE, #FFF);
@@ -784,8 +791,8 @@ margin-bottom: 16px;
 }
 
 .modal{
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   border-radius: 4px;
   background-color: var(--DAIRY, #FCFCFC);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1067,11 +1074,21 @@ margin-bottom: 16px;
   .menu-open-btn{
     display: none;
   }
-  .contact-list{
-    display: flex;
+  .contact-adress{
   }
-  .contact-list-link{
-    padding: 16px 0;
+  .contact-list{
+    display: block;
+    flex-wrap: wrap;
+    text-align: center;
+    padding-top: 16px;
+  }
+  .contact-list-item {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .modal{
+    width: 408px;
+    min-height: 584px;
   }
 }
 @media screen and (min-width: 1158px){
@@ -1148,5 +1165,18 @@ margin-bottom: 16px;
   }
   .portfolio-item{
     width: calc((100% - 72px) /3);
+  }
+  .contact-list{
+    display: flex;
+    gap: 40px;
+    padding: 24px 0;
+  }
+  .contact-list-item {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .modal{
+    width: 408px;
+    min-height: 584px;
   }
 }
