--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ a{
 
   .header {
     height: 56px;
-    display: flex;
+    /* display: flex; */
     /* delet display: flex; 1 line up on 768 ans 1158
     height too */
     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
@@ -60,7 +60,7 @@ a{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-right: 76px;
+    margin-right: 0;
   }
 
   .header-logo-color {
@@ -68,11 +68,35 @@ a{
 }
 
 .header-navigation {
-  display: flex;
+  /* display: flex;
   flex-grow: 1;
   align-items: center;
+  justify-content: flex-start; */
+  display: flex;
+  flex-grow: 1;
   justify-content: flex-start;
+  align-items: center;
+  margin: 16px 0;
 }
+
+.menu-open-btn{
+  background-color: transparent;
+  border: none;
+  /* position: absolute; */
+  top: 16px;
+  right: 16px;
+  width: 24px;
+  height: 24px;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  background-color: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  margin-left: auto;
+}
+
 
 .header-menu {
   display: none;
@@ -147,23 +171,6 @@ color: #404BBF;
 color: #404BBF;
 }
 
-.menu-open-btn{
-  margin-left: auto;
-  background-color: transparent;
-  border: none;
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #E7E9FC;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0;
-  cursor: pointer;
-}
 
 .mob-menu{
   position: fixed;
@@ -1045,6 +1052,12 @@ margin-bottom: 16px;
     max-width: 496px;
     font-size: 56px;
     line-height: 1.07;
+  }
+  .header-logo{
+    margin-right: 72px;
+  }
+  .header-navigation{
+    margin: 0;
   }
   .hero-button{
     margin-top: 36px;
