--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,11 @@ color: #404BBF;
   pointer-events: auto;
 }
 
+.mob-menu-container{
+  display: flex;
+  justify-content: center;
+}
+
 .menu-close-btn {
   display: block;
   margin-left: auto;
@@ -426,6 +431,7 @@ color: #404BBF;
 .best-sides-text {
   color: var(--SLATE, #434455);
 font-size: 16px;
+font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
 }
@@ -954,6 +960,7 @@ margin-bottom: 16px;
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* position: relative;; */
 }
 
 .modal-textarea:focus{
@@ -1008,6 +1015,8 @@ margin-bottom: 16px;
   border: none;
   fill: #F4F4FD;
 }
+.check-label-link{
+}
 
 /* @media screen and (min-width: 320px) {
   .container{
@@ -1026,6 +1035,9 @@ margin-bottom: 16px;
 @media screen and (min-width: 768px) {
   .container{
     max-width: 768px;
+  }
+  .contact-list-link{
+    font-size: 12px;
   }
   .hero{
     padding-top: 112px;
@@ -1067,6 +1079,12 @@ margin-bottom: 16px;
   }
   .best-sides-list-item{
     width: calc((100% - 24px) /2);
+  }
+  .best-sides-subtitle{
+    text-align: left;
+  }
+  .best-sides-text{
+    font-weight: 400;
   }
   .team-list{
     gap: 64px 24px;
@@ -1113,9 +1131,17 @@ margin-bottom: 16px;
     text-align: left;
     margin-right: 24px;
   }
+  .social-media{
+    margin-top: 0; 
+    margin-bottom: 72px;
+  }
   .footer-container{
-    display: inline-flex;
+    display: flex;
     text-align: left;
+    justify-content: left;
+  }
+  .container.footer-container{
+    max-width: 584px;
   }
 }
 @media screen and (min-width: 1158px){
@@ -1123,6 +1149,9 @@ margin-bottom: 16px;
     max-width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
+  }
+  .contact-list-link{
+    font-size: 16px;
   }
   .hero{
     padding-top: 188px;
@@ -1170,6 +1199,7 @@ margin-bottom: 16px;
   .best-sides-subtitle{
     font-size: 20px;
     font-weight: 500;
+    /* text-align: left; */
   }
   .team{
     padding-top: 120px;
@@ -1216,6 +1246,9 @@ margin-bottom: 16px;
   .footer-container{
     display: flex;
     text-align: left;
+  }
+  .container.footer-container{
+    min-width: 1158px;
   }
   .social-media{
     margin-top: 0;
